# nem-catalog

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODOS.md  catalog.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: catalog-url-404.md
.github/workflows/: integration.yml  policy-audit.yml  publish-catalog.yml  release.yml  test.yml  weekly-refresh.yml
.plans/: TODOS.md  issue-17-findings-2026-04-24.md  v0.1-implementation.md  v0.1.1-refresh-fix.md  v0.1.2-pr1-duplicate-filter.md  v0.2-pr1-extractor-classifier-gaps.md  v0.2-pr2-write-json-multi-record.md
docs/: aemo-coordination.md  api-tour.md  architecture.md  cookbook.md  troubleshooting.md
nemweb-mirror/Data_Archive/: index.html
nemweb-mirror/Data_Archive/Wholesale_Electricity/: index.html
nemweb-mirror/Data_Archive/Wholesale_Electricity/FCAS_Causer_Pays/: index.html
nemweb-mirror/Data_Archive/Wholesale_Electricity/MMSDM/: index.html
nemweb-mirror/Data_Archive/Wholesale_Electricity/NEMDE/: index.html
nemweb-mirror/Reports/: index.html
nemweb-mirror/Reports/ARCHIVE/: index.html
nemweb-mirror/Reports/ARCHIVE/Adjusted_Prices_Reports/: index.html
nemweb-mirror/Reports/ARCHIVE/Bidmove_Complete/: index.html
nemweb-mirror/Reports/ARCHIVE/Bidmove_Summary/: index.html
nemweb-mirror/Reports/ARCHIVE/Billing/: index.html
nemweb-mirror/Reports/ARCHIVE/CDEII/: index.html
nemweb-mirror/Reports/ARCHIVE/Causer_Pays_Scada/: index.html
nemweb-mirror/Reports/ARCHIVE/DAILYOCD/: index.html
nemweb-mirror/Reports/ARCHIVE/DISPATCHFCST/: index.html
nemweb-mirror/Reports/ARCHIVE/Daily_Reports/: index.html
nemweb-mirror/Reports/ARCHIVE/DispatchIS_FCAS_Fix/: index.html
nemweb-mirror/Reports/ARCHIVE/DispatchIS_Reports/: index.html
nemweb-mirror/Reports/ARCHIVE/Dispatch_IRSR/: index.html
nemweb-mirror/Reports/ARCHIVE/Dispatch_Negative_Residue/: index.html
nemweb-mirror/Reports/ARCHIVE/Dispatch_Reports/: index.html
nemweb-mirror/Reports/ARCHIVE/Dispatch_SCADA/: index.html
nemweb-mirror/Reports/ARCHIVE/Dispatchprices_PRE_AP/: index.html
nemweb-mirror/Reports/ARCHIVE/FPPDAILY/: index.html
nemweb-mirror/Reports/ARCHIVE/FPPRATES/: index.html
nemweb-mirror/Reports/ARCHIVE/FPPRUN/: index.html
nemweb-mirror/Reports/ARCHIVE/GBB/: index.html
nemweb-mirror/Reports/ARCHIVE/GSH/: index.html
nemweb-mirror/Reports/ARCHIVE/HistDemand/: index.html
nemweb-mirror/Reports/CURRENT/: index.html
patterns/curated/: README.md  fcas_causer_pays.yaml  freshness-policy.yaml  mmsdm.yaml  nemde.yaml  reports.yaml
plans/: v0.1-b2-curated-only-marker.md  v0.1-implementation.md  v0.1.1-refresh-fix.md
reference/: MMSDM-DDL-COLUMNS.csv  MMSDM-DDL-RENAMES.csv  MMSDM-RENAMES-VERIFICATION.md  MMSDM-TABLE-LIFECYCLE.csv  MMSDM-TABLE-LIFECYCLE.md  MMSDM-TABLE-TIMELINE.csv  MMSDM-UPGRADE-TABLES.csv  NEMWEB-STRUCTURE.md  URL-CONVENTIONS.csv  URL-CONVENTIONS.md
reference/aemo-catalog/: FETCH-MANIFEST.md
reference/aemo-mmsdm-docs/: INVENTORY.md
schemas/: catalog.schema.json
scripts/: audit_policy.py  check_robots.py  dataset_diff.py  extract_mmsdm_ddl.py  extract_mmsdm_upgrade_reports.py  extract_mmsdm_upgrade_tables.py  extract_patterns.py  merge_catalog.py  nemweb_download.py  policy.py  sample_reachability.py  synthesize_mmsdm_timeline.py  update_crawl_badge.sh
src/nem_catalog/: __init__.py  catalog.py  errors.py  loader.py
tests/: readme_examples.sh  test_audit_policy.py  test_catalog.py  test_download_policy_walk.py  test_download_save_listing.py  test_errors.py  test_extract_patterns_classify.py  test_extract_patterns_json.py  test_extract_patterns_no_aux_collapse.py  test_fetch_latest.py  test_loader.py  test_merge_catalog.py  test_policy.py  test_readme_examples.py  test_resolve.py  test_resolve_multirecord.py  test_schema_v2.py  test_schema_validation.py  test_writejson_integration.py  test_writejson_subpatterns.py
tests/fixtures/: sample_catalog.json
(+2832 files in other folders)
