[project]
name = "nem-catalog"
version = "0.1.0"
description = "Machine-readable URL catalog for AEMO NEMWEB (JSON + JSON Schema + Python SDK)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Zhipeng He", email = "zippo.he@qut.edu.au"}]
keywords = ["aemo", "nemweb", "nem", "australian-energy-market", "electricity-market-data", "json-schema", "data-catalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ZhipengHe/nem-catalog"
Repository = "https://github.com/ZhipengHe/nem-catalog"
Catalog = "https://zhipenghe.me/nem-catalog/catalog.json"
Schema = "https://zhipenghe.me/nem-catalog/catalog.schema.json"
Changelog = "https://github.com/ZhipengHe/nem-catalog/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.20",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nem_catalog"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist — the repo contains a 58 MB nemweb-mirror/ research
# artifact + plans/ + reference/ that are NOT runtime dependencies. Default
# hatch sdist would ship them all to PyPI permanently.
include = [
  "/src",
  "/tests",
  "/schemas",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/catalog.json",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
